Fixed all scrollbars

--- a/OMS Front End/src/styles/Common.scss
+++ b/OMS Front End/src/styles/Common.scss
@@ -860,6 +860,9 @@ a {
   .card {
     .card-body-sec {
       padding: 5px !important;
+      @media only screen and (max-width: 1750px) {
+        height: calc(100vh - 150px);
+      }
     }
   }
 }
@@ -2313,11 +2316,33 @@ input[type="checkbox"]:disabled {
   }
 }
 
+.customer-detail-tab-sec{
+  .card {
+    padding: 10px 0 !important;
+    table {
+      tbody {
+        max-height: calc(100vh - 540px);
+        @media only screen and (max-width: 1750px) {
+          max-height: calc(100vh - 490px);
+        }
+      }
+    }
+  }
+}
+
 .customer-list-all {
   margin-top: 5px !important;
 
   .card {
     padding: 10px 0 !important;
+    table {
+      tbody {
+        max-height: calc(100vh - 380px);
+        @media only screen and (max-width: 1750px) {
+          max-height: calc(100vh - 350px);
+        }
+      }
+    }
   }
 
   table {
@@ -3686,35 +3711,35 @@ input[type="checkbox"]:disabled {
   font-size: var(--commonFont-large) !important;
   color: #d81f1f !important;
 }
-.view-icon{
+.view-icon {
   font-size: var(--commonFont-large) !important;
   color: #1755b3 !important;
 }
-.key-icon{
+.key-icon {
   font-size: var(--commonFont-large) !important;
   color: #4ca717 !important;
 }
-.api-icon{
+.api-icon {
   font-size: var(--commonFont-large) !important;
   color: #14538d !important;
 }
-.delete-icon{
+.delete-icon {
   font-size: var(--commonFont-large) !important;
   color: #d10808 !important;
 }
-.order-price-list{
-  .css-1jqq78o-placeholder{
+.order-price-list {
+  .css-1jqq78o-placeholder {
     display: flex;
   }
   table {
-    tbody{
+    tbody {
       tr {
-        td {  
+        td {
           span {
-            padding: 4px 0 ;
+            padding: 4px 0;
           }
         }
       }
     }
-  }  
+  }
 }
